litmask/tests/compile/mask_fmt_non_literal_template.stderr
error: mask_fmt! requires a string literal template at the call site; use `mask!` to decrypt a runtime string
  --> tests/compile/mask_fmt_non_literal_template.rs:10:23
   |
10 |     let _ = mask_fmt!(template, 1);
   |                       ^^^^^^^^
